cmake_minimum_required(VERSION 2.6)

project(leetcode CXX)

set(CXX_FLAGS
	-g
	)

set(CMAKE_CXX_COMPILER "g++")

string(REPLACE ":" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
add_executable(001_two-sum								001_two-sum.cpp)
add_executable(021_merge-two-sorted-lists				021_merge-two-sorted-lists.cpp)
add_executable(023_merge-k-sorted-lists					023_merge-k-sorted-lists.cpp)
add_executable(027_remove-element						027_remove-element.cpp)
add_executable(053_maximum-subarray_DP					053_maximum-subarray_DP.cpp)
add_executable(064_minimum-path-sum_DP					064_minimum-path-sum_DP.cpp)
add_executable(070_climbing-stairs_DP					070_climbing-stairs_DP.cpp)
add_executable(086_partition-list						086_partition-list.cpp)
add_executable(092_reverse-linked-list-ii				092_reverse-linked-list-ii.cpp)
add_executable(118_pascals-triangle						118_pascals-triangle.cpp)
add_executable(119_pascals-triangle-ii					119_pascals-triangle-ii.cpp)
add_executable(120_triangle_DP							120_triangle_DP.cpp)
add_executable(122_best-time-to-buy-and-sell-stock-ii	122_best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(126_word-ladder-ii_BFS					126_word-ladder-ii_BFS.cpp)
add_executable(127_word-ladder_BFS						127_word-ladder_BFS.cpp)
add_executable(141_linked-list-cycle					141_linked-list-cycle.cpp)
add_executable(142_linked-list-cycle-ii					142_linked-list-cycle-ii.cpp)
add_executable(155_min-stack							155_min-stack.cpp)
add_executable(160_intersection-of-two-linked-lists		160_intersection-of-two-linked-lists.cpp)
add_executable(169_majority-element						169_majority-element.cpp)
add_executable(198_house-robber_DP						198_house-robber_DP.cpp)
add_executable(200_number-of-islands_BFS				200_number-of-islands_BFS.cpp)
add_executable(200_number-of-islands_DFS				200_number-of-islands_DFS.cpp)
add_executable(206_reverse-linked-list_ITER				206_reverse-linked-list_ITER.cpp)
add_executable(206_reverse-linked-list_REC				206_reverse-linked-list_REC.cpp)
add_executable(217_contains-duplicate					217_contains-duplicate.cpp)
add_executable(224_basic-calculator						224_basic-calculator.cpp)
add_executable(225_implement-stack-using-queues			225_implement-stack-using-queues.cpp)
add_executable(232_implement-queue-using-stacks			232_implement-queue-using-stacks.cpp)
add_executable(268_missing-number						268_missing-number.cpp)
add_executable(268_missing-number_BIT					268_missing-number_BIT.cpp)
add_executable(283_move-zeroes							283_move-zeroes.cpp)
add_executable(300_longest-increasing-subsequence_DP	300_longest-increasing-subsequence_DP.cpp)
add_executable(300_longest-increasing-subsequence_STACK 300_longest-increasing-subsequence_STACK.cpp)
add_executable(322_coin-change_DP						322_coin-change_DP.cpp)
add_executable(473_matchsticks-to-square_DFS			473_matchsticks-to-square_DFS.cpp)
add_executable(473_matchsticks-to-square_BitMap			473_matchsticks-to-square_BitMap.cpp)
add_executable(485_max-consecutive-ones					485_max-consecutive-ones.cpp)
add_executable(561_array-partition-i					561_array-partition-i.cpp)
add_executable(566_reshape-the-matrix					566_reshape-the-matrix.cpp)
add_executable(661_image-smoother						661_image-smoother.cpp)
add_executable(695_max-area-of-island_BFS				695_max-area-of-island_BFS.cpp)
add_executable(766_toeplitz-matrix						766_toeplitz-matrix.cpp)
add_executable(867_transpose-matrix						867_transpose-matrix.cpp)
add_executable(896_monotonic-array						896_monotonic-array.cpp)
add_executable(905_sort-array-by-parity					905_sort-array-by-parity.cpp)
